omada-controller/base/deployment.yml
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "omada-controller"
spec:
  strategy:
    type: "Recreate"
  selector:
    matchLabels:
      app: "omada-controller"
  template:
    metadata:
      labels:
        app: "omada-controller"
    spec:
      nodeName: "k3s-node-1"
      hostNetwork: true
      containers:
        - name: "omada-controller"
          image: "docker.io/mbentley/omada-controller:latest-chromium"
          resources:
            limits:
              memory: "2Gi"
              cpu: 1.25
          livenessProbe:
            exec:
              command:
                - "/healthcheck.sh"  # TODO: maybe httpGet instead?
            periodSeconds: 60
            failureThreshold: 5
          startupProbe:
            exec:
              command:
                - "/healthcheck.sh"
            # wait 3mins first
            initialDelaySeconds: 180
            # test 24 * 5s after (+2mins) = 5mins
            periodSeconds: 5
            failureThreshold: 24
          ports:
            - containerPort: 8088
              name: "manage-http"
            - containerPort: 8043
              name: "manage-https"
            - containerPort: 8843
              name: "portal-https"
            - containerPort: 27001
              protocol: "UDP"
              name: "app-discovery"
            - containerPort: 29810
              protocol: "UDP"
              name: "discovery"
            - containerPort: 29811
              name: "manager-v1"
            - containerPort: 29812
              name: "adopt-v1"
            - containerPort: 29813
              name: "upgrade-v1"
            - containerPort: 29814
              name: "manager-v2"
            - containerPort: 29815
              name: "transfer-v2"
            - containerPort: 29816
              name: "rtty"
          volumeMounts:
            - mountPath: "/opt/tplink/EAPController/data"
              name: "omada-data"
            - mountPath: "/opt/tplink/EAPController/logs"
              name: "omada-logs"
      volumes:
        - name: "omada-data"
          persistentVolumeClaim:
            claimName: "omada-data"
        - name: "omada-logs"  # TODO: do we want this longer?
          emptyDir:
            sizeLimit: "1Gi"
