omada-controller/base/service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "omada-controller"
spec:
  selector:
    app: "omada-controller"
  ports:
    - port: 80
      targetPort: "manage-http"
      name: "manage-http"
    - port: 443
      targetPort: "manage-https"
      name: "manage-https"
    - port: 8843
      targetPort: "portal-https"
      name: "portal-https"
    - port: 27001
      protocol: "UDP"
      targetPort: "app-discovery"
      name: "app-discovery"
    - port: 29810
      protocol: "UDP"
      targetPort: "discovery"
      name: "discovery"
    - port: 29811
      targetPort: "manager-v1"
      name: "manager-v1"
    - port: 29812
      targetPort: "adopt-v1"
      name: "adopt-v1"
    - port: 29813
      targetPort: "upgrade-v1"
      name: "upgrade-v1"
    - port: 29814
      targetPort: "manager-v2"
      name: "manager-v2"
    - port: 29815
      targetPort: "transfer-v2"
      name: "transfer-v2"
    - port: 29816
      targetPort: "rtty"
      name: "rtty"
